--- a/style.css
+++ b/style.css
@@ -199,7 +199,10 @@ footer {
      12px -8px 0px 0px black,
      0px 4px 0px 0px #c6c6c6,
      4px 4px 0px 0px #c6c6c6,
-     -4px 6px 0px 0px #c6c6c6;
+     -4px 6px 0px 0px #c6c6c6,
+	 4px 6px 0px 0px #c6c6c6,
+	 12px 6px 0px 0px #555555,
+	 16px 6px 0px 0px black;
        display: flex;
        flex-direction: column;
        align-items: flex-start;
@@ -251,4 +254,13 @@ footer {
 	top: 5px;
 	color: #4c4c4c;
 }
-.tabtext2 {background-color: #4c4c4c;color: #ffffff;font-family: 'minefont';box-shadow: 4px 0px 0px 0px #4C4C4C,0px -4px 0px 0px #4C4C4C,-4px 0px 0px 0px #4C4C4C,0px 4px 0px 0px #4C4C4C;font-size: 30px;position: relative;left: 6px;bottom: 4px;}
+.tabtext2 {
+	background-color: #4c4c4c;
+	color: #ffffff;
+	font-family: 'minefont';
+	box-shadow: 4px 0px 0px 0px #4C4C4C,0px -4px 0px 0px #4C4C4C,-4px 0px 0px 0px #4C4C4C,0px 4px 0px 0px #4C4C4C;
+	font-size: 30px;
+	position: relative;
+	left: 6px;
+	bottom: 4px;
+}
