--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ footer {
 	bottom: 0vh;
 }
 .tabbtn {
-       background-color: #626262;
+       background-color: #B1B1B1;
        border: none;
        z-index: 5;
        width: 19%;
