--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ footer {
 	bottom: 0vh;
 }
 .tabbtn {
-       background-color: #B1B1B1;
+       background-color: #626262;
        border: none;
        z-index: 5;
        width: 19%;
@@ -261,4 +261,7 @@ footer {
 	left: 6px;
 	bottom: 4px;
 	font-weight: lighter;
+}
+.tabbtnactive > .tabtext .tabtext2 {
+        color: #B1B1B1;
 }
