--- a/style.css
+++ b/style.css
@@ -262,6 +262,6 @@ footer {
 	bottom: 4px;
 	font-weight: lighter;
 }
-.tabbtnactive > .tabtext .tabtext2 {
+.tabbtnactive .tabtext , .tabtext2 {
         color: #B1B1B1;
 }
