--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ html {
 	font-family: minefont;
 	font-weight: lighter;
 }
+body::-webkit-scrollbar {
+  display: none;
+}
 h1, h2, h3, h4, h5, h6, h7{
 	font-family: minefont;
 	font-weight: lighter;
@@ -244,20 +247,11 @@ footer {
     0 12px 0 0 #000,
     4px 12px 0 0 #000;
 	width: 84.33%;
-	height: 500px;
 	background-color: #C6C6C6;
 	z-index: 6;
-	display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: flex-start;
-	align-content: center;
-	align-items: center;
 	-ms-overflow-style: none;  /* IE and Edge */
-  	scrollbar-width: none; 
-}
-.tabindex::-webkit-scrollbar {
-  display: none;
+	scrollbar-width: none;
+	height: 500px;
 }
 .tabicon {
 	-webkit-user-select: none; /* Safari */        
@@ -305,7 +299,7 @@ footer {
 	background-color: #C6C6C6;
 	width: 95%;
 	border: none;
-	margin: 10px;
+	margin: 10px auto 10px auto;
 	height: auto;
 	display: flex;
 	flex-direction: row;
