--- a/style.css
+++ b/style.css
@@ -130,20 +130,19 @@ footer {
 	bottom: 0vh;
 }
 .tabbtn {
-       -webkit-user-select: none; /* Safari */        
-	-moz-user-select: none; /* Firefox */
-	-ms-user-select: none; /* IE10+/Edge */
-	user-select: none;
-	background-color: #626262;
-	color: #B1B1B1;
-       	border: none;
-       	z-index: 5;
-       	width: 19%;
-       	height: 100px;
-       	margin-left: 16px;
-       	margin-right: 16px;
-       	margin-bottom: 4px;
-       	box-shadow: -4px 0px 0px 0px #626262,
+       -webkit-user-select: none; /* Safari */
+       -moz-user-select: none; /* Firefox */
+       -ms-user-select: none; /* IE10+/Edge */
+       user-select: none;
+       background-color: #626262;
+       color: #B1B1B1;
+       border: none;
+       z-index: 5;
+       height: 100px;
+       margin-left: 16px;
+       margin-right: 16px;
+       margin-bottom: 4px;
+       box-shadow: -4px 0px 0px 0px #626262,
 		   0px -4px 0px 0px #626262,
 		   -8px -8px 0px 0px #C4C4C4,
 		   4px -4px 0px 0px #626262,
@@ -169,23 +168,22 @@ footer {
 		   4px 6px 0px 0px #626262,
 	       12px 6px 0px 0px #2C2C2C,
 		   16px 6px 0px 0px black;
-       	display: flex;
-       	flex-direction: column;
-       	align-items: flex-start;
-       	flex-wrap: wrap;
-       	align-content: flex-start;
+       display: inline-flex;
+       flex-direction: column;
+       align-items: flex-start;
+       flex-wrap: wrap;
+       align-content: flex-start;
 }
 .tabbtnactive {
-       -webkit-user-select: none; /* Safari */        
-	-moz-user-select: none; /* Firefox */
-	-ms-user-select: none; /* IE10+/Edge */
-	user-select: none;
-	background-color: #c6c6c6;
-	color: #4C4C4C;
+       -webkit-user-select: none; /* Safari */
+       -moz-user-select: none; /* Firefox */
+       -ms-user-select: none; /* IE10+/Edge */
+       user-select: none;
+       background-color: #c6c6c6;
+       color: #4C4C4C;
        border: none;
-       display: inline-block;
+       display: inline-flex;
        z-index: 7;
-       width: 19%;
        height: 100px;
        margin-left: 16px;
        margin-right: 16px;
@@ -213,7 +211,7 @@ footer {
      0px 4px 0px 0px #c6c6c6,
      4px 4px 0px 0px #c6c6c6,
      -4px 6px 0px 0px #c6c6c6;
-       display: flex;
+       display: inline-flex;
        flex-direction: column;
        align-items: flex-start;
        flex-wrap: wrap;
@@ -246,7 +244,6 @@ footer {
     -4px -12px 0 0 #000,
     0 12px 0 0 #000,
     4px 12px 0 0 #000;
-	width: 84.33%;
 	background-color: #C6C6C6;
 	z-index: 6;
 	-ms-overflow-style: none;  /* IE and Edge */
@@ -338,4 +335,60 @@ footer {
 	margin: 10px;
 	color: #fff;
 	text-shadow: 0.125em 0.125em 0 #9d9d9d;
+}
+.maincage {
+	z-index: 5;
+    width: 1200px;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: auto;
+}
+@media only screen and (max-width: 600px) {
+	.tabbtn {
+	width: 20.5%;
+	}
+	.tabindex {
+	width: 87vw;
+	}
+}
+@media only screen and (max-width: 768px) {
+	.tabbtn {
+	width: 19.6%;
+	}
+	.tabindex {
+	width: 87vw;
+	}
+}
+@media only screen and (max-width: 992px) {
+	.tabbtn {
+	width: 19.64%;
+	}
+	.tabindex {
+	width: 87vw;
+	}
+}
+@media only screen and (max-width: 1200px) {
+	.tabbtn {
+	width: 249px;
+	}
+	.tabindex {
+	width: 1100px;
+	}
+}
+@media only screen and (min-width: 1200px) {
+	.tabbtn {
+	width: 249px;
+	}
+	.tabindex {
+	width: 1100px;
+	}
+}
+@media (min-width:100px) and (max-width:600px) {
+	.maincage {
+	width: 99vw;
+	}
 }
