--- a/style.css
+++ b/style.css
@@ -328,7 +328,7 @@ footer {
 	font-size: larger;
 	font-family: 'minefontbig';
 	color: #fff;
-	text-align: justify;
+	text-align: left;
 	right: 67px;
 	top: 45px;
 	width: 59%;
