--- a/gui/jukebox.css
+++ b/gui/jukebox.css
@@ -311,5 +311,9 @@
   z-index: 15;
   left: 38%;
   height: 120px;
-  width: 10px;
+  width: 50px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-image: url(https://parv66.github.io/icons/music_note.png);
 }
